# screenenv

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.py
client/: sandbox.py  sandbox_demo.py  test_sandbox.py
client/remote_provider/: __init__.py
client/remote_provider/docker/: provider.py
docker/desktop/: Dockerfile.ubuntu_xfce4  app_setup.py  base_server.py  request_models.py  response_models.py  server.py
docker/desktop/ubuntu_xfce4/: 10-dummy.conf  desktop.conf  gui_operation.py  init_dbus_socket.py  plank-entry  requirements.txt  server.py  set-wallpaper.sh  xorg.conf  xsettings.xml
docker/desktop/ubuntu_xfce4/opt/chrome/policies/managed/: download_policy.json  homepage_policy.json
docker_env/desktop/: Dockerfile.ubuntu_xfce4  server.py
docker_env/desktop/ubuntu_xfce4/: xfce4-panel.xml  xfwm4.xml
examples/: desktop_agent.py  gui_agent.py  mcp_server_demo.py  sandbox_demo.py  utils.py
examples/computer-agent/: app.py  e2bqwen.py  eval.py  requirements.txt
examples/computer-agent/templates/: viewer.html
src/screenenv/: __init__.py  mcp_remote_server.py  remote_env.py  remote_screen_env.py  retry_decorator.py  sandbox.py  sandbox_demo.py  screen_remote_env.py  test_sandbox.py
src/screenenv/remote_provider/: __init__.py  create_remote_env.py
src/screenenv/remote_provider/docker/: provider.py
